--- a/ui/src/assets/document.css
+++ b/ui/src/assets/document.css
@@ -146,7 +146,7 @@ input {
   outline-style: none;
   border: none;
   min-width: 0;
-  font-size: var(--frequency);
+  font-size: var(--body);
 }
 
 dl li {
@@ -166,14 +166,14 @@ dd {
 li p:first-child {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: var(--frequency);
+  font-size: var(--body);
   line-height: var(--h3);
 }
 
 /* Layout Styles */
 #document {
-  font-size: var(--frequency);
-  width: var(--doc-width);
+  font-size: var(--body);
+  width: var(--document-width);
   margin: auto;
   flex-flow: column nowrap;
 }
