--- a/ui/src/assets/theme.css
+++ b/ui/src/assets/theme.css
@@ -32,7 +32,8 @@ html {
   --h1: 2rem;
   --h2: 1.5874rem;
   --h3: 1.2599rem;
-  --small: 0.7937rem;
+  --footer: 0.7937rem;
+  --small: 0.5rem;
   --margin-before: 1em;
   --margin-after: 0.5em;
   /* Leading */
