a lot of bug fixes & some style updates from the revised figma

--- a/ui/src/assets/app.css
+++ b/ui/src/assets/app.css
@@ -1,13 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 #app {
   display: flex;
   width: 100vw;
   height: 100vh;
-  flex-flow: column;
+  flex-flow: row;
+  background-color: var(--off-color);
+}
+
+#body {
+  display: flex;
+  flex-grow: 1;
+  flex-flow: column nowrap;
+}
+
+nav {
+  /* width: 240px; */
+}
+
+#toolbar {
+  @apply p-3;
 }
 
 .context-menu {
@@ -34,9 +48,13 @@
 }
 
 .context-menu input {
-  @apply p-3;
+  @apply rounded-1 p-3;
   background-color: #ffffff00;
   outline: none;
+}
+
+.context-menu input[type="color"] {
+  padding: 0;
 }
 
 .context-menu input:hover {
