--- a/ui/src/components/document/prosemirror.css
+++ b/ui/src/components/document/prosemirror.css
@@ -63,7 +63,7 @@ header p.Prosemirror-placeholder:before {
 dl.Prosemirror-config-terms {
   position: absolute;
   width: var(--document-width);
-  top: calc(1em + 12px + var(--title));
+  top: calc(1em + 12px + var(--h2));
 }
 
 #Prosemirror-config-toggle:checked ~ dl.Prosemirror-config-terms {
