--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.clickable:hover {
+  cursor: pointer;
+  background-color: var(--type-glass-color);
+}
