base api build (no tests or checks)

--- a/ui/src/assets/theme.css
+++ b/ui/src/assets/theme.css
@@ -5,26 +5,23 @@
   f(i) = f0 * r^(i/n)
 */
 
-
-
-
 /* Variables */
 html {
   /* Theme Variables */
   --root-frequency: 1em;
   --ratio: 2;
-  --paper-color: #FBFBFB;
-  --type-color: #262626;
-  --off-color: #E2DCC9;
+  --paper-color: #fbfbfb; /* From Realm */
+  --type-color: #262626; /* From Realm */
+  --off-color: #e2dcc9; /* From Realm */
   --document-width: 60ch;
-  --status-primary-color: #38BDF8;
-  --status-primary-glass-color: #38BDF866;
-  --status-success-color: #10A30D;
-  --status-success-glass-color: #10A30D66;
-  --status-warning-color: #FACA1F;
-  --status-warning-glass-color: #FACA1F66;
-  --status-failure-color: #E71F1F;
-  --status-failure-glass-color: #E71F1F66;
+  --status-primary-color: #38bdf8;
+  --status-primary-glass-color: #38bdf866;
+  --status-success-color: #10a30d;
+  --status-success-glass-color: #10a30d66;
+  --status-warning-color: #faca1f;
+  --status-warning-glass-color: #faca1f66;
+  --status-failure-color: #e71f1f;
+  --status-failure-glass-color: #e71f1f66;
 
   /* Effects */
   --body: 1em;
@@ -40,13 +37,13 @@ html {
   --leading-body: 1.2599em;
   --leading-heading: 1.5874em;
   /* Colour */
-  --paper-glass-color: #FBFBFB20;
-  --type-glass-color: #26262620;
-  --off-glass-color: #E2DCC920;
+  --paper-glass-color: #fbfbfb20;
+  --type-glass-color: #26262620; /* From Realm */
+  --off-glass-color: #e2dcc920;
 
   /* Root Styles */
   font-size: var(--root-frequency);
   line-height: var(--leading-body);
   color: var(--type-color);
-  background-color: var(--paper-color)
+  background-color: var(--paper-color);
 }
