--- a/ui/src/assets/app.css
+++ b/ui/src/assets/app.css
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-@import '~react-complex-tree/lib/style.css';
+@import "~react-complex-tree/lib/style.css";
 #app {
   @apply flex text-body font-app;
   width: 100vw;
   height: 100vh;
   background-color: var(--off-color);
   @apply dark:bg-slate-700 duration-1000;
-  
 }
 
 #body {
@@ -23,8 +22,20 @@ nav {
 
 #toolbar {
   @apply p-3;
-
 }
+
+/* Components */
+address {
+  @apply px-2 rounded-1;
+  font-style: normal;
+  font-weight: 500;
+  font-size: var(--footer);
+  background-color: var(--type-glass-color);
+  font-family: "IBM Plex Mono", monospace;
+  box-shadow: inset 0px 0px 4px 2px var(--type-glass-color);
+}
+
+/* Menu */
 
 .context-menu {
   @apply rounded-2 shadow-menu;
