--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -17,9 +17,14 @@
 }
 
 .icon {
-  @apply p-1 rounded-2;
+  @apply p-1 rounded-1;
   width: var(--leading-body);
   height: var(--leading-body);
+}
+
+.clickable {
+  background-color: #fbfbfb00;
+  transition: background-color 80ms ease-out;
 }
 
 .clickable:hover {
