--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -63,6 +63,20 @@
 
 /* Components --------------------------------------------------------------- */
 
+/* File Tree Items */
+.tree-item {
+  @apply flex px-4 py-2;
+}
+
+.tree-item-hidden {
+  opacity: 0;
+  transition: opacity 80ms ease-out;
+}
+
+.tree-item:hover .tree-item-hidden {
+  opacity: 1;
+}
+
 /* Menus */
 
 /**
