--- a/ui/src/assets/app.css
+++ b/ui/src/assets/app.css
@@ -18,3 +18,17 @@
 #toolbar {
   @apply flex items-center px-4 py-3;
 }
+
+#sidebar {
+  @apply flex flex-col overflow-hidden;
+  width: 18vw;
+  min-width: 280px;
+}
+
+@media (max-width: 800px) {
+  #sidebar {
+    @apply absolute rounded-2 shadow-menu;
+    top: calc(20px + var(--leading-body));
+    max-height: calc(100vh - calc(20px + var(--leading-body)));
+  }
+}
