some small screen fixes

--- a/ui/src/assets/app.css
+++ b/ui/src/assets/app.css
@@ -21,6 +21,7 @@
 
 #sidebar {
   @apply flex flex-col overflow-hidden;
+  z-index: 1;
   width: 18vw;
   min-width: 280px;
 }
@@ -28,6 +29,7 @@
 @media (max-width: 800px) {
   #sidebar {
     @apply absolute rounded-2 shadow-menu;
+    background-color: var(--paper-color);
     top: calc(20px + var(--leading-body));
     max-height: calc(100vh - calc(20px + var(--leading-body)));
   }
