working make & list

--- a/ui/src/assets/app.css
+++ b/ui/src/assets/app.css
@@ -28,9 +28,10 @@
 
 @media (max-width: 800px) {
   #sidebar {
-    @apply absolute rounded-2 shadow-menu;
+    @apply absolute rounded-3 shadow-menu;
     background-color: var(--paper-color);
-    top: calc(20px + var(--leading-body));
+    top: calc(28px + var(--leading-body));
+    left: 16px;
     max-height: calc(100vh - calc(20px + var(--leading-body)));
   }
 }
