--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -156,3 +156,14 @@
   height: var(--leading-body);
   margin-left: 10px;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-none {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
