some frontent fixes

--- a/ui/src/components/document/document.css
+++ b/ui/src/components/document/document.css
@@ -305,6 +305,16 @@ main .ProseMirror {
   background-color: var(--paper-color);
   padding: var(--h2) 4ch var(--title);
   box-shadow: 0 0px 16px -8px var(--trim-color);
+  animation: fade-in ease-out 200ms;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 #document-wrapper::-webkit-scrollbar {
