fixed more styling

--- a/ui/src/components/document/document.css
+++ b/ui/src/components/document/document.css
@@ -127,6 +127,12 @@ a {
   text-decoration: underline;
 }
 
+abbr {
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 /* Header */
 header {
   margin-bottom: calc(var(--h1) / 2);
