fixed the comment styling with themes

--- a/ui/src/components/document/document.css
+++ b/ui/src/components/document/document.css
@@ -153,6 +153,7 @@ header p {
 
 /* Comments */
 mark {
+  color: var(--type-color);
   background-color: var(--type-glass-color);
   text-decoration: underline;
 }
