--- a/ui/src/components/document/prosemirror.css
+++ b/ui/src/components/document/prosemirror.css
@@ -30,9 +30,9 @@ header p.Prosemirror-placeholder:before {
 }
 
 .ProseMirror-selectednode {
-  outline: 2px solid var(--status-primary-color);
-  outline-offset: -2px;
-  background-color: var(--status-primary-glass-color);
+  outline: 2px solid var(--type-color);
+  outline-offset: 2px;
+  /* background-color: var(--status-primary-glass-color); */
 }
 
 .Prosemirror-config dl,
