some more fixes -- this time slash menu

--- a/ui/src/assets/theme.css
+++ b/ui/src/assets/theme.css
@@ -30,6 +30,7 @@
   --h1: 2rem;
   --h2: 1.5874rem;
   --h3: 1.2599rem;
+  --heading-weight: 800;
   --footer: 0.7937rem;
   --small: 0.5rem;
   --margin-before: 1em;
