--- a/ui/src/assets/theme.css
+++ b/ui/src/assets/theme.css
@@ -31,6 +31,7 @@
   --h2: 1.5874rem;
   --h3: 1.2599rem;
   --heading-weight: 800;
+  --heading-font-family: "Rubik";
   --footer: 0.7937rem;
   --small: 0.5rem;
   --margin-before: 1em;
